jicofo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: jicofo
  name: jicofo
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25% 
  template:
    metadata:
      labels:
        service: jicofo
    spec:
      containers:
      - env:
        - name: XMPP_SERVER
          value: 10.100.198.14
#value: prosody clusterip          
        - name: XMPP_DOMAIN
          value: jitsi.devopsk8s.cf
        - name: XMPP_AUTH_DOMAIN
          value: auth.jitsi.devopsk8s.cf
        - name: JICOFO_COMPONENT_SECRET
#          value: s3cr37
          value: password
        - name: JICOFO_AUTH_USER
          value: focus
        - name: JVB_BREWERY_MUC
          value: jvbbrewery
        - name: XMPP_INTERNAL_MUC_DOMAIN
          value: internal-muc.jitsi.devopsk8s.cf
        - name: JICOFO_AUTH_PASSWORD
          value: password
#          value: passw0rd
        - name: JIBRI_BREWERY_MUC
          value: jibribrewery
        - name: JIBRI_PENDING_TIMEOUT
          value: "90"
        - name: TZ
          value: Asia/Kolkata
        image: jitsi/jicofo
        name: jicofo
        resources:
          requests:
            memory: "200Mi"
            cpu: "200m"
          limits:
            memory: "300Mi"
            cpu: "300m"                
      restartPolicy: Always
status: {}
