jvb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: jvb
  name: jvb
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%    
  template:
    metadata:
      labels:
        service: jvb
    spec:
      containers:
      - env:
        - name: JVB_PORT
          value: "32220"
        - name: XMPP_SERVER
          value: 10.100.198.14
#          value: <IP address of the prosody ClusterIP service>
        - name: DOCKER_HOST_ADDRESS
          value: 10.100.210.64
#          value:<ClusterIP of jvb service exposing the UDP:10000 TCP:4443 ports of the videobridge>
        - name: XMPP_DOMAIN
          value: jitsi.devopsk8s.cf
        - name: XMPP_AUTH_DOMAIN
          value: auth.jitsi.devopsk8s.cf
        - name: JVB_COMPONENT_SECRET
#          value: s3cr3t
          value: password
        - name: JVB_AUTH_PASSWORD
          value: password
        - name: JVB_STUN_SERVERS
          value: meet-jit-si-turnrelay.jitsi.net:443
#          value: stun.l.google.com:19302,stun1.l.google.com:19302,stun2.l.google.com:19302
        - name: JICOFO_AUTH_USER
          value: focus
        - name: TZ
          value: Asia/Kolkata
        - name: JVB_TCP_HARVESTER_DISABLED
          value: "true"
        - name: JVB_TCP_PORT
          value: "31110"
        - name: JVB_AUTH_USER
          value: jvb
        - name: JVB_BREWERY_MUC
          value: jvbbrewery
        - name: XMPP_INTERNAL_MUC_DOMAIN
          value: internal-muc.jitsi.devopsk8s.cf
        image: jitsi/jvb
        name: jvb
        ports:
        - containerPort: 32220
          protocol: UDP
        - containerPort: 31110
        resources:
          requests:
            memory: "300Mi"
            cpu: "300m"
          limits:
            memory: "500Mi"
            cpu: "500m"                
      restartPolicy: Always
