web-deployment.yaml
#apiVersion: extensions/v1beta1
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: web
  name: web
  namespace: minikube
spec:
  selector:
    matchLabels:
      service: web
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25% 
  template:
    metadata:
      labels:
        service: web
    spec:
      containers:
      - env:
        - name: JICOFO_AUTH_USER
          value: focus
        - name: XMPP_DOMAIN
          value: minikube.devopsk8s.cf
        - name: XMPP_AUTH_DOMAIN
          value: auth.minikube.devopsk8s.cf
        - name: XMPP_BOSH_URL_BASE
          value: http://prosody:5280
        - name: XMPP_MUC_DOMAIN
          value: muc.minikube.devopsk8s.cf
        - name: TZ
          value: Asia/Kolkata
        - name: JIBRI_BREWERY_MUC 
          value: jibribrewery
        - name: JIBRI_PENDING_TIMEOUT
          value: "90"
        - name: JIBRI_XMPP_USER
          value: jibri
        - name: JIBRI_XMPP_PASSWORD
          value: password
        - name: JIBRI_RECORDER_USER
          value: recorder
        - name: JIBRI_RECORDER_PASSWORD
          value: password
        - name: ENABLE_RECORDING
          value: "1"
        image: ramalingam81/jitsi-web-logo
#        image: ramalingam81/web
        name: web
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          requests:
            memory: "200Mi"
            cpu: "200m"
          limits:
            memory: "300Mi"
            cpu: "300m"
status: {}
