jibri-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jibri
  name: jibri
  namespace: minikube
spec:
  ports:
  - name: "3333"
    port: 3333
    targetPort: 3333
  - name: "2222"
    port: 2222
    targetPort: 2222
  selector:
    service: jibri
status:
  loadBalancer: {}
